next round of edits

--- a/index.html
+++ b/index.html
@@ -5,13 +5,53 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./output-css/style.css">
+  <link
+  href="https://fonts.googleapis.com/css?family=Silkscreen&display=swap"
+  rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="script.js"></script>
 
+  <style>
+    a {
+      text-decoration: none;
+    }
+
+    a {
+      color: inherit;
+    }
+  </style>
   <title>Personal Site</title>
 </head>
 <body>
   <nav>
-    
+    <div class="navbar">
+  <!-- <div id="hamburger-menu" class="fa fa-bars hamburger-menu">Menu</div>  -->
+      <div class="navbar-content container">
+        <div id="site-menu" class="navbar-menu">
+        <!-- <div class="nav-bar-right">
+          <img class="nav-bar-logo" src="images/linkedin.svg">
+          <img class="nav-bar-logo" src="images/github.sng">
+        </div> -->
+          <ul class="navbar-list">
+            <li class="navbar-item">Who I Am</li>
+            <li class="navbar-item">My Work</li>
+            <li class="navbar-item">Get In Touch</li>
+            <li class="na-bar-item">Some Cool Stuff</li>
+        </ul>
+        </div>
+      </div>
+    </div>
   </nav>
+  <main>
+    <section class="hero">
+      <div class="hero-text">
+        <h1>Christian Medders</h1>
+        <p>Hey there, thanks so much for coming. This site was made to showcase some projects I have worked on and contributed to also to let you get to know me a little more... Enjoy!</p>
+      </div>
+      <img class="hero-pic" src="images/me.jpg">
+
+    </section>
+  </main>
   
 </body>
 </html>
