--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <div class="hero-text">
         <h1>Christian Medders</h1>
         <p>Hey there, thanks so much for coming. This site was made to showcase some projects I have worked on and contributed to also to let you get to know me a little more... Enjoy!</p>
+        <button class="hero-button">Let's Connect</button>
       </div>
       <img class="hero-pic" src="images/me.jpg">
 
