wokred on mobel menu

--- a/index.html
+++ b/index.html
@@ -25,32 +25,39 @@
 <body>
   <nav>
     <div class="navbar">
-  <!-- <div id="hamburger-menu" class="fa fa-bars hamburger-menu">Menu</div>  -->
       <div class="navbar-content container">
-        <div id="site-menu" class="navbar-menu">
-        <!-- <div class="nav-bar-right">
-          <img class="nav-bar-logo" src="images/linkedin.svg">
-          <img class="nav-bar-logo" src="images/github.sng">
-        </div> -->
-          <ul class="navbar-list">
+  <div class="nav-bar-right">
+  <div id="hamburger-menu" class="fa fa-bars hamburger-menu">Menu</div> 
+
+    <img class="navbar-logo" src="images/linkedin.png">
+    <img class="navbar-logo" src="images/cat-2.png">
+  </div>
+  <div id="site-menu" class="navbar-menu">
+        <div class="navbar-list">
+          <ul>
             <li class="navbar-item">Who I Am</li>
             <li class="navbar-item">My Work</li>
             <li class="navbar-item">Get In Touch</li>
             <li class="na-bar-item">Some Cool Stuff</li>
         </ul>
         </div>
+        </div>
       </div>
     </div>
   </nav>
   <main>
     <section class="hero">
-      <div class="hero-text">
-        <h1>Christian Medders</h1>
-        <p>Hey there, thanks so much for coming. This site was made to showcase some projects I have worked on and contributed to also to let you get to know me a little more... Enjoy!</p>
-        <button class="hero-button">Let's Connect</button>
-      </div>
-      <img class="hero-pic" src="images/me.jpg">
+      <div class="hero-inner container">
+        <div class="hero-text">
+          <!-- <div class="container"> -->
+            <h1>Christian Medders</h1>
+            <p>Hey there, thanks so much for coming. This site was made to showcase some projects I have worked on and contributed to also to let you get to know me a little more... Enjoy!</p>
+            <button class="hero-button">Let's Connect</button>
+          
+        </div>
+        <img class="hero-pic" src="images/me.jpg">
 
+          </div>
     </section>
   </main>
   
