--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
   <nav>
     <div class="navbar">
       <div class="navbar-content container">
-  <div class="nav-bar-right">
+  <div class="navbar-right">
+    <ul class="navbar-logo">
+      <li> <a href="https://www.linkedin.com/in/christian-medders-6a00b7a5/"  target="_blank"> <img class="navbar-logo-item" src="images/linkedin.png"></a></li>
+      <li style="margin-left: 1em">
+        <a href="https://github.com/clmedders" target="_blank"> <img class="navbar-logo-item" src="images/cat-2.png"></a>
+      </li>
+    </ul>
   <div id="hamburger-menu" class="fa fa-bars hamburger-menu">Menu</div> 
-
-    <img class="navbar-logo" src="images/linkedin.png">
-    <img class="navbar-logo" src="images/cat-2.png">
   </div>
   <div id="site-menu" class="navbar-menu">
         <div class="navbar-list">
