--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./output-css/style.css">
-  <link
+  <!-- <link
   href="https://fonts.googleapis.com/css?family=Silkscreen&display=swap"
+  rel="stylesheet"/> -->
+  <link
+  href="https://fonts.google.com/specimen/Electrolize?category=Serif,Sans+Serif,Display,Monospace"
   rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="script.js"></script>
