added who i am section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div id="site-menu" class="navbar-menu">
         <div class="navbar-list">
           <ul>
-            <li class="navbar-item">Who I Am</li>
+            <li class="navbar-item"><a href="#who-i-am" target="_top">Who I Am</a></li>
             <li class="navbar-item">My Work</li>
             <li class="navbar-item">Get In Touch</li>
             <li class="na-bar-item">Some Cool Stuff</li>
@@ -55,7 +55,6 @@
     <section class="hero">
       <div class="hero-inner container">
         <div class="hero-text">
-          <!-- <div class="container"> -->
             <h1>Christian Medders</h1>
             <p>Hey there, thanks so much for coming. This site was made to showcase some projects I have worked on and contributed to also to let you get to know me a little more... Enjoy!</p>
             <button class="hero-button">Let's Connect</button>
@@ -64,6 +63,22 @@
         <img class="hero-pic" src="images/me.jpg">
 
           </div>
+    </section>
+    <section id="who-i-am" class="who-i-am">
+      <div class="who-i-am-content container">
+        <h1>
+          What wakes me get up in the mornings
+        </h1>
+        <p>
+          As you can tell my name is Christian, I know surprise right?  I am outdoor loving, glof club swinging, beer drinking (and sometimes brewing) guy who also likes to do some coding.  Most of my professional career was spent in Higer Eduction working in student affaris, then one day I felt like it was time for a change.  Lucky I had some awesome people around me to help support me in my transistion.  My older brother told me I would be a good developer and I beleived him.  Then I found a great company that took a chance on me and has allowed me to grow in my skills.  I currently work on the Testing and QA side of developement with a goal of beocming a bad ass developer. 
+          <br>
+          <br>
+          However I am much more than that... I am also a son, brother, friend, husband and future dad.  Born and raised in Aiken SC I met the love of my life in college and have grown a pretty awesome life.  We are expecting our frist child come fall and with all the crazyness that will bring I really cant imaage it being any other way.  I am so greatful that you are here and hope that when you leave this site you have a better idea of who I am, what I can do and maybe have a desisire to connect.  
+          <br>
+          <br>
+          Enjoy!
+        </p>
+      </div>
     </section>
   </main>
   
