finsihed who i am section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <nav>
     <div class="navbar">
       <div class="navbar-content container">
-  <div class="navbar-right">
+  <!-- <div class="navbar-right"> -->
     <ul class="navbar-logo">
       <li> <a href="https://www.linkedin.com/in/christian-medders-6a00b7a5/"  target="_blank"> <img class="navbar-logo-item" src="images/linkedin.png"></a></li>
       <li style="margin-left: 1em">
@@ -37,7 +37,7 @@
       </li>
     </ul>
   <div id="hamburger-menu" class="fa fa-bars hamburger-menu">Menu</div> 
-  </div>
+  <!-- </div> -->
   <div id="site-menu" class="navbar-menu">
         <div class="navbar-list">
           <ul>
@@ -69,11 +69,11 @@
         <h1>
           What wakes me get up in the mornings
         </h1>
-        <p>
-          As you can tell my name is Christian, I know surprise right?  I am outdoor loving, glof club swinging, beer drinking (and sometimes brewing) guy who also likes to do some coding.  Most of my professional career was spent in Higer Eduction working in student affaris, then one day I felt like it was time for a change.  Lucky I had some awesome people around me to help support me in my transistion.  My older brother told me I would be a good developer and I beleived him.  Then I found a great company that took a chance on me and has allowed me to grow in my skills.  I currently work on the Testing and QA side of developement with a goal of beocming a bad ass developer. 
+        <p class="p-tag">
+          I am outdoor loving, glof club swinging, beer drinking (and sometimes brewing) guy who likes to do some coding. Most of my career was spent in Higer Education working in student affaris, then one day I felt like it was time for a change. Lucky I had some awesome people to help support me in my transistion. My older brother told me I could be a good developer and I beleived him. Now I am with a great company that took a chance on me and has allowed me to grow in my skills.  I work on the Testing and QA side of developement with a goal of beocming a bad ass developer. 
           <br>
           <br>
-          However I am much more than that... I am also a son, brother, friend, husband and future dad.  Born and raised in Aiken SC I met the love of my life in college and have grown a pretty awesome life.  We are expecting our frist child come fall and with all the crazyness that will bring I really cant imaage it being any other way.  I am so greatful that you are here and hope that when you leave this site you have a better idea of who I am, what I can do and maybe have a desisire to connect.  
+          However I am much more than that... I am also a son, brother, friend, husband and future dad. Born and raised in Aiken SC I met the love of my life in college and have grown a pretty awesome life. We are expecting our frist child come fall and with all the crazyness that will bring I really can't imaage it being any other way. I am so greatful that you are here and hope that when you leave you have a better idea of who I am, what I can do and maybe have a desire to connect.  
           <br>
           <br>
           Enjoy!
