updated nav bar color

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="hero-inner container">
         <div class="hero-text">
             <h1>Christian Medders</h1>
-            <p>Hey there, thanks so much for coming. This site was made to showcase some projects I have worked on and contributed to also to let you get to know me a little more... Enjoy!</p>
+            <p>Hey there, thanks so much for coming. This site was made to showcase some projects I have worked on and contributed to. Also to let you get to know me a little more... Enjoy!</p>
             <button class="hero-button">Let's Connect</button>
           
         </div>
@@ -70,10 +70,10 @@
           What wakes me get up in the mornings
         </h1>
         <p class="p-tag">
-          I am outdoor loving, glof club swinging, beer drinking (and sometimes brewing) guy who likes to do some coding. Most of my career was spent in Higer Education working in student affaris, then one day I felt like it was time for a change. Lucky I had some awesome people to help support me in my transistion. My older brother told me I could be a good developer and I beleived him. Now I am with a great company that took a chance on me and has allowed me to grow in my skills.  I work on the Testing and QA side of developement with a goal of beocming a bad ass developer. 
+          I am outdoor loving, glof club swinging, beer drinking (and sometimes brewing) guy who likes to do some coding. Most of my career was spent in Higher Education working in student affairs, then one day I felt like it was time for a change. Lucky I had some awesome people to help support me in my transistion. My older brother told me I could be a good developer and I beleived him. Now I am with a great company that took a chance on me and has allowed me to grow in my skills.  I work on the Testing and QA side of developement with a goal of beocming a bad ass developer. 
           <br>
           <br>
-          However I am much more than that... I am also a son, brother, friend, husband and future dad. Born and raised in Aiken SC I met the love of my life in college and have grown a pretty awesome life. We are expecting our frist child come fall and with all the crazyness that will bring I really can't imaage it being any other way. I am so greatful that you are here and hope that when you leave you have a better idea of who I am, what I can do and maybe have a desire to connect.  
+          However I am much more than that... I am also a son, brother, friend, husband and future dad. Born and raised in Aiken SC I met the love of my life in college and have grown a pretty awesome life. We are expecting our frist child come fall and with all the craziness that will bring, I really can't imagine it being any other way. I am so greatful that you are here and hope that when you leave you have a better idea of who I am, what I can do and maybe have a desire to connect.  
         </p>
       </div>
     </section>
