--- a/index.html
+++ b/index.html
@@ -77,6 +77,44 @@
         </p>
       </div>
     </section>
+    <section class="my-work">
+      <div class="work_inner container">
+        <div class="dev-work">
+          <h1>Development Work</h1>
+          <div class="dev-work-inner">
+            <div class="dev-work-card">
+              <h2>Made In America</h2>
+              <p>An initiative to help promote more american made goods. Click here to read more.</p>
+            </div>
+            <div class="dev-work-card">
+              <h2>Vote.gov</h2>
+              <p>Your one stop shop for election information. Click Here to read more.</p>
+            </div>
+            <div class="dev-work-card">
+              <h2>National Parks</h2>
+              <p>My first landing page. Click here to read more.</p>
+            </div>
+            <div class="dev-work-card">
+              <h2>Aiken Coffeehouse and Lounge</h2>
+              <p>My brain child and dream business. Clikc here to read more.</p>
+            </div>
+          </div>
+        </div>
+        <div class="personal-work">
+          <h1>Personal Work</h1>
+          <div class="personal-work-inner">
+            <div class="personal-work-card">
+              <h2>Boston</h2>
+              <p>Watch me get engaged and my trip to Boston. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=Q_QmepSYqng"  target="_blank">here</a> to watch.</p>
+            </div>
+            <div class="personal-work-card">
+              <h2>Disney and Universal</h2>
+              <p>Check out my trip to Disney and Harry Potter World. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=mnGA00I5H1o"  target="_blank">here</a> to watch.</p></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   
 </body>
