--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <div class="navbar-list">
           <ul>
             <li class="navbar-item"><a href="#who-i-am" target="_top">Who I Am</a></li>
-            <li class="navbar-item">My Work</li>
-            <li class="navbar-item">Get In Touch</li>
+            <li class="navbar-item"><a href="#my-work" target="_top">My Work</a></li>
+            <!-- <li class="navbar-item">Get In Touch</li> -->
             <li class="na-bar-item">Some Cool Stuff</li>
         </ul>
         </div>
@@ -57,7 +57,7 @@
         <div class="hero-text">
             <h1>Christian Medders</h1>
             <p>Hey there, thanks so much for coming. This site was made to showcase some projects I have worked on and contributed to. Also to let you get to know me a little more... Enjoy!</p>
-            <button class="hero-button">Let's Connect</button>
+            <button class="hero-button"><a href="https://linktr.ee/christianmedders"  target="_blank">Let's Connect</a></button>
           
         </div>
         <img class="hero-pic" src="images/me.jpg">
@@ -77,7 +77,7 @@
         </p>
       </div>
     </section>
-    <section class="my-work">
+    <section id="my-work" class="my-work">
       <div class="work_inner container">
         <div class="dev-work">
           <h1>Development Work</h1>
