--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./output-css/style.css">
-  <!-- <link
-  href="https://fonts.googleapis.com/css?family=Silkscreen&display=swap"
-  rel="stylesheet"/> -->
   <link
   href="https://fonts.google.com/specimen/Electrolize?category=Serif,Sans+Serif,Display,Monospace"
   rel="stylesheet"/>
@@ -32,7 +29,7 @@
   <!-- <div class="navbar-right"> -->
     <ul class="navbar-logo">
       <li> <a href="https://www.linkedin.com/in/christian-medders-6a00b7a5/"  target="_blank"> <img class="navbar-logo-item" src="images/linkedin.png"></a></li>
-      <li style="margin-left: 1em">
+      <li>
         <a href="https://github.com/clmedders" target="_blank"> <img class="navbar-logo-item" src="images/cat-2.png"></a>
       </li>
     </ul>
@@ -43,8 +40,7 @@
           <ul>
             <li class="navbar-item"><a href="#who-i-am" target="_top">Who I Am</a></li>
             <li class="navbar-item"><a href="#my-work" target="_top">My Work</a></li>
-            <!-- <li class="navbar-item">Get In Touch</li> -->
-            <li class="na-bar-item">Some Cool Stuff</li>
+            <li class="navbar-item"><a href="#cool-stuff" target="_top">Some Cool Stuff</a></li>
         </ul>
         </div>
         </div>
@@ -58,22 +54,20 @@
             <h1>Christian Medders</h1>
             <p>Hey there, thanks so much for coming. This site was made to showcase some projects I have worked on and contributed to. Also to let you get to know me a little more... Enjoy!</p>
             <button class="hero-button"><a href="https://linktr.ee/christianmedders"  target="_blank">Let's Connect</a></button>
-          
         </div>
         <img class="hero-pic" src="images/me.jpg">
-
           </div>
     </section>
     <section id="who-i-am" class="who-i-am">
       <div class="who-i-am-content container">
         <h1>
-          What wakes me get up in the mornings
+          What Wakes Me Up In The Morning
         </h1>
         <p class="p-tag">
-          I am outdoor loving, glof club swinging, beer drinking (and sometimes brewing) guy who likes to do some coding. Most of my career was spent in Higher Education working in student affairs, then one day I felt like it was time for a change. Lucky I had some awesome people to help support me in my transistion. My older brother told me I could be a good developer and I beleived him. Now I am with a great company that took a chance on me and has allowed me to grow in my skills.  I work on the Testing and QA side of developement with a goal of beocming a bad ass developer. 
+          I am an outdoor-loving, golf club swinging, beer-drinking (and sometimes brewing) guy who likes to do some coding. Most of my career was spent in Higher Education working in student affairs, then one day I felt like it was time for a change. Luckily, I had some awesome people to help support me in my transition. My older brother told me I could become a good developer and I believed him. Now I am with a great company that took a chance on me and has allowed me to grow my skills. I work on the Testing and QA side of the development with the goal to become a badass developer.
           <br>
           <br>
-          However I am much more than that... I am also a son, brother, friend, husband and future dad. Born and raised in Aiken SC I met the love of my life in college and have grown a pretty awesome life. We are expecting our frist child come fall and with all the craziness that will bring, I really can't imagine it being any other way. I am so greatful that you are here and hope that when you leave you have a better idea of who I am, what I can do and maybe have a desire to connect.  
+          However, I am much more than that... I am also a son, brother, friend, husband, and future dad. Born and raised in Aiken, SC I met the love of my life in college and have grown an awesome life. We are expecting our first child come fall and with all the craziness that will bring, I really can't imagine it being any other way. I am so grateful that you are here and hope that when you leave you to have a better idea of who I am, what I can do, and maybe have a desire to connect.  
         </p>
       </div>
     </section>
@@ -84,7 +78,7 @@
           <div class="dev-work-inner">
             <div class="dev-work-card">
               <h2>Made In America</h2>
-              <p>An initiative to help promote more american made goods. Click here to read more.</p>
+              <p>An initiative to help promote more American made goods. Click here to read more.</p>
             </div>
             <div class="dev-work-card">
               <h2>Vote.gov</h2>
@@ -96,7 +90,7 @@
             </div>
             <div class="dev-work-card">
               <h2>Aiken Coffeehouse and Lounge</h2>
-              <p>My brain child and dream business. Clikc here to read more.</p>
+              <p>My brain child and dream business. Click here to read more.</p>
             </div>
           </div>
         </div>
@@ -105,11 +99,29 @@
           <div class="personal-work-inner">
             <div class="personal-work-card">
               <h2>Boston</h2>
-              <p>Watch me get engaged and my trip to Boston. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=Q_QmepSYqng"  target="_blank">here</a> to watch.</p>
+              <p>Watch me get engaged on my trip to Boston. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=Q_QmepSYqng"  target="_blank">here</a> to watch.</p>
             </div>
             <div class="personal-work-card">
               <h2>Disney and Universal</h2>
               <p>Check out my trip to Disney and Harry Potter World. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=mnGA00I5H1o"  target="_blank">here</a> to watch.</p></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="cool-stuff" class="cool-stuff">
+      <div class="stuff_inner container">
+        <h1>Cool Stuff To Check Out</h1>
+        <p>Here are some cool articles and tools that I have found to be helpful and I think they could be good for you as well.</p>
+        <div class="cool-stuff-card">
+          <div class="card-inner">
+            <div class="card-front">
+              <img class="cool-stuff-pic" src="images/pineapple.png">
+            </div>
+            <div class="card-back">
+              <a href="https://kentcdodds.com/blog/write-tests" target="_blank"> 
+                <p>Write tests. Not too many. Mostly integration.</p>
+                </a>
             </div>
           </div>
         </div>
