--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           I am an outdoor-loving, golf club swinging, beer-drinking (and sometimes brewing) guy who likes to do some coding. Most of my career was spent in Higher Education working in student affairs, then one day I felt like it was time for a change. Luckily, I had some awesome people to help support me in my transition. My older brother told me I could become a good developer and I believed him. Now I am with a great company that took a chance on me and has allowed me to grow my skills. I work on the Testing and QA side of the development with the goal to become a badass developer.
           <br>
           <br>
-          However, I am much more than that... I am also a son, brother, friend, husband, and future dad. Born and raised in Aiken, SC I met the love of my life in college and have grown an awesome life. We are expecting our first child come fall and with all the craziness that will bring, I really can't imagine it being any other way. I am so grateful that you are here and hope that when you leave you to have a better idea of who I am, what I can do, and maybe have a desire to connect.  
+          However, I am much more than that... I am also a son, brother, friend, husband, and a dad. Born and raised in Aiken, SC I met the love of my life in college and have grown an awesome life. We have one child and with all the craziness that will bring, I really can't imagine it being any other way. I am so grateful that you are here and hope that when you leave you to have a better idea of who I am, what I can do, and maybe have a desire to connect.  
         </p>
       </div>
     </section>
@@ -75,18 +75,22 @@
           <h1>Development Work</h1>
           <div class="dev-work-inner">
             <div class="dev-work-card">
+              <img class="mia-card" src="images/mia-card.png">
               <h2>Made In America</h2>
               <p>An initiative to help promote more American made goods. Click here to read more.</p>
             </div>
             <div class="dev-work-card">
+              <img class="vote-card" src="images/vote-card.png">
               <h2>Vote.gov</h2>
               <p>Your one stop shop for election information. Click Here to read more.</p>
             </div>
             <div class="dev-work-card">
+              <img class="park-card" src="images/ys park.jpeg">
               <h2>National Parks</h2>
               <p>My first landing page. Click here to read more.</p>
             </div>
             <div class="dev-work-card">
+              <img class="aiken-card" src="images/coffee.png">
               <h2>Aiken Coffeehouse and Lounge</h2>
               <p>My brain child and dream business. Click here to read more.</p>
             </div>
@@ -96,10 +100,12 @@
           <h1>Personal Work</h1>
           <div class="personal-work-inner">
             <div class="personal-work-card">
+              <img class="boston-card" src="images/boston.png">
               <h2>Boston</h2>
               <p>Watch me get engaged on my trip to Boston. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=Q_QmepSYqng"  target="_blank">here</a> to watch.</p>
             </div>
             <div class="personal-work-card">
+              <img class="disney-card" src="images/disney.png">
               <h2>Disney and Universal</h2>
               <p>Check out my trip to Disney and Harry Potter World. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=mnGA00I5H1o"  target="_blank">here</a> to watch.</p></p>
             </div>
@@ -108,24 +114,28 @@
       </div>
     </section>
     <section id="cool-stuff" class="cool-stuff">
-      <div class="stuff_inner container">
         <h1>Cool Stuff To Check Out</h1>
         <p>Here are some cool articles and tools that I have found to be helpful and I think they could be good for you as well.</p>
+      <div class="stuff-inner">
         <div class="cool-stuff-card">
-          <div class="card-inner">
-            <div class="card-front">
-              <img class="cool-stuff-pic" src="images/pineapple.png">
-            </div>
-            <div class="card-back">
-              <a href="https://kentcdodds.com/blog/write-tests" target="_blank"> 
+              <img class="testing-pic" src="images/pineapple.png">
+              <a style="text-decoration: underline;" href="https://kentcdodds.com/blog/write-tests" target="_blank"> 
                 <p>Write tests. Not too many. Mostly integration.</p>
                 </a>
-            </div>
           </div>
+          <div class="cool-stuff-card">
+            <img class="odin-pic" src="images/odin.png">
+            <a style="text-decoration: underline;" href="https://www.theodinproject.com/about" target="_blank"> 
+              <p>The Odin Project</p>
+              </a>
         </div>
-      </div>
+        </div>
     </section>
   </main>
-  
+  <footer class="footer">
+    <div class="container">
+      <p>Thanks for visiting!</p>
+    </div>
+  </footer>  
 </body>
 </html>
