--- a/index.html
+++ b/index.html
@@ -77,12 +77,14 @@
             <div class="dev-work-card">
               <img class="mia-card" src="images/mia-card.png">
               <h2>Made In America</h2>
-              <p>An initiative to help promote more American made goods. Click here to read more.</p>
+              <p>An initiative to help promote more American made goods. Click <a style="text-decoration: underline;" href="mia.html" target="_blank"> 
+                here </a>to read more.</p>
             </div>
             <div class="dev-work-card">
               <img class="vote-card" src="images/vote-card.png">
               <h2>Vote.gov</h2>
-              <p>Your one stop shop for election information. Click Here to read more.</p>
+              <p>Your one stop shop for election information. Click       <a style="text-decoration: underline;" href="https://kentcdodds.com/blog/write-tests" target="_blank"> 
+                here </a>to read more.</p>
             </div>
             <div class="dev-work-card">
               <img class="park-card" src="images/ys park.jpeg">
@@ -116,7 +118,7 @@
     <section id="cool-stuff" class="cool-stuff">
         <h1>Cool Stuff To Check Out</h1>
         <p>Here are some cool articles and tools that I have found to be helpful and I think they could be good for you as well.</p>
-      <div class="stuff-inner">
+      <div class="stuff-inner container">
         <div class="cool-stuff-card">
               <img class="testing-pic" src="images/pineapple.png">
               <a style="text-decoration: underline;" href="https://kentcdodds.com/blog/write-tests" target="_blank"> 
@@ -129,6 +131,12 @@
               <p>The Odin Project</p>
               </a>
         </div>
+        <div class="cool-stuff-card">
+          <img class="cypress-pic" src="images/cypress.png">
+          <a style="text-decoration: underline;" href="https://www.cypress.io/" target="_blank"> 
+            <p>JavaScript End to End Tesing Tool.</p>
+            </a>
+      </div>
         </div>
     </section>
   </main>
