--- a/mia.html
+++ b/mia.html
@@ -26,16 +26,58 @@
     <section class="mia">
       <div class="mia-content container">
         <h1>
-          What wakes me get up in the mornings
+          Made In America
         </h1>
         <p class="p-tag">
-          This was my first full project I was able to work on. 
+          This project was the first one I had the chance to truly begin my journey in Test Automation and QA.
           <br>
           <br>
-          This project had a lot of growth for me, from starting off with traditional testing to integrating into Cypress and GitHub actions and a testing pipeline. 
+          There is a true mix of skills to be used… Cypress, GitHub Actions, Circle Ci, Pa11y, Html Proofer, and traditional manual testing.   At the end of the blog, you will find links to my code and to the tools that were used in this project. 
           <br>
           <br>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <b>Cypress</b>
+          <br>
+          This is a great tool that can test anything that is in a browser.  This project was used to focus on functional testing.  There has been a suite of tests that were written to cover how a typical user would interact with the site.  This induces checking that page’s load, and waiver page function is working as expected and that all links on the site are valid and do not lead users to a 404 error. 
+          <br>
+          <br>
+          <b>HTML Proofer</b>
+          <br> 
+          This tool is used by running through the entire site and checking every external link is working and valid. By doing this we are ensuring that the user is having a good experience and not being led to sites that are not working 
+          <br>
+          <br>
+          <b>PA11y</b>
+          <br>
+          An automated accessibility testing tool will check each page for accessibility errors. This runs off AXE core which is a standard tool to be used. 
+          <br>
+          <br>
+          <b> GitHub Actions</b> 
+          <br>
+          In this project, GitHub actions were used to run the above tests through a pipeline.  This was triggered every time there was a pull request and any push that was done after. 
+          <br>
+          <br>
+          All these tools have allowed the team to catch any errors and bugs that might come up before they hit production.  Now, this has not been 100%, sometimes there are things you need to test that you didn’t know about before your launch, but a good development team can catch bugs and address them quickly.  This helps give your client confidence that you can handle any issue that might come up. 
+          <br>
+          <br>
+          From someone who was working in education less than a year before joining this project to helping provide a robust testing pipeline.  I look at the work done for this and am proud in knowing that users are having a positive experience and we are also helping promote American-made goods. 
+          <br>
+          <br>
+          Links to reports, tests, tools, and other things 
+          <br>
+          <br>
+          <ul>
+            <li>Cypress ->  <a style="text-decoration: underline;" href="https://www.cypress.io/" target="_blank"> 
+              click here </a></li>
+            <li>HTML Proofer -> <a style="text-decoration: underline;" href="https://github.com/gjtorikian/html-proofer" target="_blank"> 
+              click here </a></li>
+            <li>PA11y -> <a style="text-decoration: underline;" href="https://pa11y.org/" target="_blank"> 
+              click here </a></li>
+            <li>GitHub Actions -> <a style="text-decoration: underline;" href="https://github.com/features/actions" target="_blank"> 
+              click here </a></li>          
+            <li>Cypress tests for project -> <a style="text-decoration: underline;" href="https://github.com/GSA/made-in-america/tree/develop/cypress/integration/tests" target="_blank"> 
+              click here </a></</li>         
+            <li>Check out the live site -> <a style="text-decoration: underline;" href="https://www.madeinamerica.gov/" target="_blank"> 
+              click here </a></li>
+          </ul>
         </p>
       </div>
     </section>
