added vote .gov and abc order

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="dev-work-card">
               <img class="vote-card" src="images/vote-card.png">
               <h2>Vote.gov</h2>
-              <p>Your one stop shop for election information. Click       <a style="text-decoration: underline;" href="https://kentcdodds.com/blog/write-tests" target="_blank"> 
+              <p>Your one stop shop for election information. Click <a style="text-decoration: underline;" href="vote.html" target="_blank"> 
                 here </a>to read more.</p>
             </div>
             <div class="dev-work-card">
