--- a/mia.html
+++ b/mia.html
@@ -23,7 +23,7 @@
     </div>
   </header>
   <main>
-    <section class="mia">
+    <section class="mia" style="padding-bottom: 40px">
       <div class="mia-content container">
         <h1>
           Made In America
