--- a/mia.html
+++ b/mia.html
@@ -64,7 +64,7 @@
           Links to reports, tests, tools, and other things 
           <br>
           <br>
-          <ul>
+          <ul class="mia-ul">
             <li>Cypress ->  <a style="text-decoration: underline;" href="https://www.cypress.io/" target="_blank"> 
               click here </a></li>
             <li>HTML Proofer -> <a style="text-decoration: underline;" href="https://github.com/gjtorikian/html-proofer" target="_blank"> 
