--- a/vote.html
+++ b/vote.html
@@ -64,7 +64,7 @@
           Links to reports, tests, tools, and other things 
           <br>
           <br>
-          <ul>
+          <ul class="vote-ul">
             <li>Cypress ->  <a style="text-decoration: underline;" href="https://www.cypress.io/" target="_blank"> 
               click here </a></li>
             <li>AXE-plugin -> <a style="text-decoration: underline;" href="https://github.com/component-driven/cypress-axe" target="_blank"> 
