--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
       </div>
     </section>
     <section id="cool-stuff" class="cool-stuff">
+      <div class="stuff-inner container">
         <h1>Cool Stuff To Check Out</h1>
         <p>Here are some cool articles and tools that I have found to be helpful and I think they could be good for you as well.</p>
-      <div class="stuff-inner container">
+        <div class="cards-inner">
         <div class="cool-stuff-card">
               <img class="testing-pic" src="images/pineapple.png">
               <a style="text-decoration: underline;" href="https://kentcdodds.com/blog/write-tests" target="_blank"> 
