--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
             <div class="dev-work-card">
               <img class="park-card" src="images/ys park.jpeg">
               <h2>National Parks</h2>
-              <p>My first landing page. Click here to read more.</p>
+              <p>My first landing page. Click <a style="text-decoration: underline;" href="natpark.html" target="_blank"> 
+                here </a>to read more.</p>
             </div>
             <div class="dev-work-card">
               <img class="aiken-card" src="images/coffee.png">
