--- a/index.html
+++ b/index.html
@@ -74,47 +74,61 @@
         <div class="dev-work">
           <h1>Development Work</h1>
           <div class="dev-work-inner">
-            <div class="dev-work-card">
-              <img class="mia-card" src="images/mia-card.png">
-              <h2>Made In America</h2>
-              <p>An initiative to help promote more American made goods. Click <a style="text-decoration: underline;" href="mia.html" target="_blank"> 
-                here </a>to read more.</p>
+            <div class="dev-card">
+              <div class="dev-card-image"> <img src="images/mia-card.png"></div>
+              <div class="dev-card-text">
+                <h2>Made In America</h2>
+                <p>An initiative to help promote more American made goods. Click <a style="text-decoration: underline;" href="mia.html" target="_blank"> 
+                  here </a>to read more.</p>
+              </div>
             </div>
-            <div class="dev-work-card">
-              <img class="vote-card" src="images/vote-card.png">
-              <h2>Vote.gov</h2>
-              <p>Your one stop shop for election information. Click <a style="text-decoration: underline;" href="vote.html" target="_blank"> 
-                here </a>to read more.</p>
+            <div class="dev-card">
+              <div class="dev-card-image"> <img src="images/vote-card.png"></div>
+              <div class="dev-card-text">
+                <h2>Vote.gov</h2>
+                <p>Your one stop shop for election information. Click <a style="text-decoration: underline;" href="vote.html" target="_blank"> 
+                  here </a>to read more.</p>
+              </div>
             </div>
-            <div class="dev-work-card">
-              <img class="park-card" src="images/ys park.jpeg">
-              <h2>National Parks</h2>
-              <p>My first landing page. Click <a style="text-decoration: underline;" href="natpark.html" target="_blank"> 
-                here </a>to read more.</p>
+            <div class="dev-card">
+              <div class="dev-card-image"> <img src="images/ys park.jpeg"></div>
+              <div class="dev-card-text">
+                <h2>National Parks</h2>
+                <p>My first landing page. Click <a style="text-decoration: underline;" href="natpark.html" target="_blank"> 
+                  here </a>to read more.</p>
+              </div>
             </div>
-            <div class="dev-work-card">
-              <img class="aiken-card" src="images/coffee.png">
-              <h2>Aiken Coffeehouse and Lounge</h2>
-              <p>My brain child and dream business. Click here to read more.</p>
+            <div class="dev-card">
+              <div class="dev-card-image"> <img src="images/coffee.png"></div>
+              <div class="dev-card-text">
+                <h2>Aiken Coffeehouse and Lounge</h2>
+                <p>My brain child and dream business. Click <a style="text-decoration: underline;" href="natpark.html" target="_blank"> 
+                  here </a>to read more.</p>
+              </div>
             </div>
           </div>
+        </div>
         </div>
         <div class="personal-work">
           <h1>Personal Work</h1>
           <div class="personal-work-inner">
-            <div class="personal-work-card">
-              <img class="boston-card" src="images/boston.png">
-              <h2>Boston</h2>
-              <p>Watch me get engaged on my trip to Boston. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=Q_QmepSYqng"  target="_blank">here</a> to watch.</p>
+            <div class="personal-card">
+              <div class="personal-card-image"> <img src="images/boston.png"></div>
+              <div class="personal-card-text">
+                <h2>Boston</h2>
+                  <p>Watch me get engaged on my trip to Boston. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=Q_QmepSYqng"  target="_blank">here</a> to watch.</p>
+              </div>
             </div>
-            <div class="personal-work-card">
-              <img class="disney-card" src="images/disney.png">
-              <h2>Disney and Universal</h2>
-              <p>Check out my trip to Disney and Harry Potter World. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=mnGA00I5H1o"  target="_blank">here</a> to watch.</p></p>
+            <div class="personal-card">
+              <div class="personal-card-image"> <img src="images/disney.png"></div>
+              <div class="personal-card-text">
+                <h2>Disney and Universal</h2>
+                <p>Check out my trip to Disney and Harry Potter World. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=mnGA00I5H1o"  target="_blank">here</a> to watch.</p></p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+ 
     </section>
     <section id="cool-stuff" class="cool-stuff">
       <div class="stuff-inner container">
