--- a/index.html
+++ b/index.html
@@ -128,33 +128,31 @@
             </div>
           </div>
         </div>
- 
     </section>
     <section id="cool-stuff" class="cool-stuff">
-      <div class="stuff-inner container">
-        <h1>Cool Stuff To Check Out</h1>
-        <p>Here are some cool articles and tools that I have found to be helpful and I think they could be good for you as well.</p>
-        <div class="cards-inner">
-        <div class="cool-stuff-card">
-              <img class="testing-pic" src="images/pineapple.png">
-              <a style="text-decoration: underline;" href="https://kentcdodds.com/blog/write-tests" target="_blank"> 
-                <p>Write tests. Not too many. Mostly integration.</p>
-                </a>
-          </div>
-          <div class="cool-stuff-card">
-            <img class="odin-pic" src="images/odin.png">
-            <a style="text-decoration: underline;" href="https://www.theodinproject.com/about" target="_blank"> 
-              <p>The Odin Project</p>
-              </a>
+      <h1>Cool Stuff To Check Out</h1>
+      <p>Here are some cool articles and tools that I have found to be helpful and I think they could be good for you as well.</p>
+      <div class="cool-stuff-inner container">
+      <div class="cool-stuff-card">
+        <div class="cool-stuff-image"> <img  src="images/pineapple.png"> </div>
+            <div class="cool-stuff-text"> <a style="text-decoration: underline;" href="https://kentcdodds.com/blog/write-tests" target="_blank"> 
+              <p>Write tests. Not too many. Mostly integration.</p>
+              </a> </div>
         </div>
         <div class="cool-stuff-card">
-          <img class="cypress-pic" src="images/cypress.png">
-          <a style="text-decoration: underline;" href="https://www.cypress.io/" target="_blank"> 
+          <div class="cool-stuff-image"> <img  src="images/odin.png"> </div>
+          <div class="cool-stuff-text">  <a style="text-decoration: underline;" href="https://www.theodinproject.com/about" target="_blank"> 
+            <p>The Odin Project</p>
+            </a> </div>
+        </div>
+        <div class="cool-stuff-card">
+          <div class="cool-stuff-image"> <img src="images/cypress.png"> </div>
+          <div class="cool-stuff-text">  <a style="text-decoration: underline;" href="https://www.cypress.io/" target="_blank"> 
             <p>JavaScript End to End Tesing Tool.</p>
-            </a>
-      </div>
+            </a> </div>
         </div>
-    </section>
+      </div>
+  </section>
   </main>
   <footer class="footer">
     <div class="container">
