--- a/aiken.html
+++ b/aiken.html
@@ -14,19 +14,19 @@
       color: inherit;
     }
   </style>
-  <title>Odin Landing Page</title>
+  <title>Aiken Coffee House and Lounge</title>
 </head>
 <body style="background: #ebebeb;">
-  <header class="odin-heder">
-    <div class="odin-hero">
-      <img class="odin-hero-pic" src="images/nationalpark.png">
+  <header class="aiken-heder">
+    <div class="aiken-hero">
+      <img class="aiken-hero-pic" src="images/coffee.png">
     </div>
   </header>
   <main>
-    <section class="odin" style="padding-bottom: 40px">
-      <div class="odin-content container">
+    <section class="aiken" style="padding-bottom: 40px">
+      <div class="aiken-content container">
         <h1>
-          National Parks
+          Aiken Coffee House and Lounge
         </h1>
         <p class="p-tag">
           This was my first ever landing page I was able to create.  During my progress on the Odin Project about halfway through this was the first major project that was given.  The cool part about this whole thing is my first page at this was just trash.  It was odd colors, and I just threw some stuff on a screen and called it a day. 
@@ -44,7 +44,7 @@
           I was told that the best front-end developers... are the best con artist.  The goal is to recreate the design that you are given. This really was the best first experience to be given a design and then asked to recreate it. 
           <br>
           <br>
-          <ul class="odin-ul">
+          <ul class="aiken-ul">
             <li>Code->  <a style="text-decoration: underline;" href="https://github.com/clmedders/odin-landing-page" target="_blank"> 
               click here </a></li>
             <li>Example Page -> <a style="text-decoration: underline;" href="https://cdn.statically.io/gh/TheOdinProject/curriculum/81a5d553f4073e593d23a6ab00d50eef8620796d/foundations/html_css/project/imgs/01.png" target="_blank"> 
