--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="dev-card-image"> <img src="images/coffee.png"></div>
               <div class="dev-card-text">
                 <h2>Aiken Coffeehouse and Lounge</h2>
-                <p>My brain child and dream business. Click <a style="text-decoration: underline;" href="natpark.html" target="_blank"> 
+                <p>My brain child and dream business. Click <a style="text-decoration: underline;" href="aiken.html" target="_blank"> 
                   here </a>to read more.</p>
               </div>
             </div>
