--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <h1>Development Work</h1>
           <div class="dev-work-inner">
             <div class="dev-card">
-              <div class="dev-card-image"> <img src="images/mia-card.png"></div>
+              <div class="dev-card-image"> <img src="images/mia-card-2.png"></div>
               <div class="dev-card-text">
                 <h2>Made In America</h2>
                 <p>An initiative to help promote more American made goods. Click <a style="text-decoration: underline;" href="mia.html" target="_blank"> 
