--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             <p>Hey there, thanks so much for coming. This site was made to showcase some projects I have worked on and contributed to. Also to let you get to know me a little more... Enjoy!</p>
             <button class="hero-button"><a href="https://linktr.ee/christianmedders"  target="_blank">Let's Connect</a></button>
         </div>
-        <img class="hero-pic" src="images/me.jpg">
+        <div class="hero-pic">
+          <img  src="images/me.jpg">
+        </div>
           </div>
     </section>
     <section id="who-i-am" class="who-i-am">
