--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: default
 ---
 
-{% include hero.html %} {% include who-i-am.html %} {% include my-work.html %} {% include cool-stuff.html %} {% include footer.html %} 
+{% include hero.html %} {% include who-i-am.html %} {% include my-work.html %} {% include cool-stuff.html %} 
